# Elasticity

./: CMakeLists.txt  ElasticityConfig.cmake.in  README.md
.github/workflows/: ci.yml
benchmark/: run.py  run_hexa.py  run_tetra.py
benchmark/cpp/: CMakeLists.txt
benchmark/cpp/src/: Hexahedron.cpp  SoA.cpp  Tetrahedron.cpp  main.cpp
benchmark/python/: run_hexa.py  run_tetra.py
benchmark/xml/: beam.py  copy_SOFA_references.py
examples/Freefem/1D/mms_validation/: mms_utils.py
examples/Freefem/2D/: neumann_incompressible.py
examples/Freefem/2D/mms_validation/: README.md  mms_2d.py
examples/Freefem/3D/mms_structured/: linear_3d.py  mms_utils_3d.py  params.json
examples/Freefem/3D/mms_validation/: params.json  sin.py  utils.py
examples/Freefem/MMS/: convergence.py  elements.py  fem.py  mms_case.py  output.py  plot_utils.py  scene.py
examples/Freefem/MMS/1D/: README.md  bar.py  bar_solution.py  cubic.py  exponential.py  manufactured_solution.py  params.json  quadratic.py  run_convergence.py  sinusoidal.py
examples/Freefem/MMS/2D/: beam.py  beam_solution.py  cubic.py  gmsh_generate_beam2D.py  incompressible.py  incompressible_p1.py  manufactured_solution.py  params.json  run_convergence.py  trigonometric-cubic-mms.py  trigonometric.py
examples/Freefem/MMS/3D/: manufactured_solution.py  (+5 more)
examples/xml/: ClothOnSphere.scn  CorotationalFEMForceField.scn  CorotationalFEMForceField_matrixFree.scn  CorotationalFEMForceField_surfaces.scn  CorotationalFEMForceField_surfaces2d.scn  CorotationalFEMForceField_surfaces3d.scn  Edges.scn  HexahedronSmallStrainFEMForceField.scn  HyperelasticCantileverBeam.xml  HyperelasticityFEMForceField.scn  LinearSmallStrainFEMForceField.scn  MixedElementTypes.scn  MooneyRivlinMaterial.scn  NeoHookeanMaterial.scn  OgdenMaterial.scn  QuadLinearSmallStrainFEMForceField_3d.scn  RegressionStateScenes.regression-tests  StVenantKirchhoffMaterial.scn  TET4LinearSmallStrainFEMForceField.scn  TetrahedronLinearSmallStrainFEMForceField.scn  TriangleLinearSmallStrainFEMForceField_2d.scn  TriangleLinearSmallStrainFEMForceField_3d.scn  YeohThirdOrder.scn
examples/xml/comparison_SOFA/: beam_assembled.scn  beam_matrixfree.scn
extensions/CUDA/: CMakeLists.txt  Elasticity.CUDAConfig.cmake.in
extensions/CUDA/src/Elasticity/CUDA/: CudaElementCorotationalFEMForceField.cpp  CudaElementHyperelasticityFEMForceField.cpp  CudaElementLinearSmallStrainFEMForceField.cpp  CudaIncompressibleMooneyRivlinMaterial.cpp  CudaLinearMechanicalParametersComponent.cpp  CudaMooneyRivlinMaterial.cpp  CudaNeoHookeanMaterial.cpp  CudaStVenantKirchhoffMaterial.cpp  config.h.in  init.cpp  init.h
src/Elasticity/: BaseLinearSmallStrainFEMForceField.cpp  BaseLinearSmallStrainFEMForceField.h  BaseLinearSmallStrainFEMForceField.inl  CorotationalFEM.cpp  CorotationalFEM.h  CorotationalFEM.inl  CorotationalFEMForceField.cpp  CorotationalFEMForceField.h  CorotationalFEMForceField.inl  ElementLinearSmallStrainFEMForceField.cpp  ElementLinearSmallStrainFEMForceField.h  ElementLinearSmallStrainFEMForceField.inl  Elements.h  Elements[Edge].h  Elements[Hexahedron].h  Elements[Quad].h  Elements[Tetrahedron].h  Elements[Triangle].h  FiniteElement.h  FiniteElement[Edge].h  FiniteElement[Hexahedron].h  FiniteElement[Quad].h  FiniteElement[Tetrahedron].h  FiniteElement[Triangle].h  LinearFEM.cpp  LinearFEM.h  LinearFEM.inl  LinearSmallStrainFEMForceField.cpp  LinearSmallStrainFEMForceField.h  LinearSmallStrainFEMForceField.inl  MatrixTools.h  TET4LinearSmallStrainFEMForceField.cpp  TET4LinearSmallStrainFEMForceField.h  TET4LinearSmallStrainFEMForceField.inl  VectorTools.h  VonMisesStressContainer.h  config.h.in  init.cpp  init.h
src/Elasticity/component/: BaseElasticityFEMForceField.cpp  BaseElasticityFEMForceField.h  BaseElasticityFEMForceField.inl  BaseElementLinearFEMForceField.cpp  BaseElementLinearFEMForceField.h  BaseElementLinearFEMForceField.inl  CorotationalFEMForceField.cpp  CorotationalFEMForceField.h  CorotationalFEMForceField.inl  ElementCorotationalFEMForceField.cpp  ElementCorotationalFEMForceField.h  ElementCorotationalFEMForceField.inl  ElementHyperelasticityFEMForceField.cpp  ElementHyperelasticityFEMForceField.h  ElementHyperelasticityFEMForceField.inl  ElementLinearSmallStrainFEMForceField.cpp  ElementLinearSmallStrainFEMForceField.h  ElementLinearSmallStrainFEMForceField.inl  ElementMass.cpp  ElementMass.h  ElementMass.inl  ElementPrefab.cpp  ElementPrefab.h  ElementPrefab.inl  FEMForceField.cpp  FEMForceField.h  FEMForceField.inl  HyperelasticMaterial.cpp  HyperelasticMaterial.h  HyperelasticMaterial.inl  HyperelasticityFEMForceField.cpp  HyperelasticityFEMForceField.h  HyperelasticityFEMForceField.inl  LinearMechanicalParametersComponent.cpp  LinearMechanicalParametersComponent.h  LinearMechanicalParametersComponent.inl  LinearSmallStrainFEMForceField.cpp  LinearSmallStrainFEMForceField.h  LinearSmallStrainFEMForceField.inl  PK2HyperelasticMaterial.cpp  (+7 more)
src/Elasticity/finiteelement/: FiniteElement.h  FiniteElement[Edge].h  FiniteElement[Hexahedron].h  FiniteElement[Quad].h  FiniteElement[Tetrahedron].h  FiniteElement[Triangle].h  FiniteElement[all].h
src/Elasticity/impl/: ComputationStrategy.h  ComputeStrategy.h  CorotationalFEM.cpp  CorotationalFEM.h  CorotationalFEM.inl  ElasticityTensor.h  ElementStiffnessMatrix.h  FullySymmetric4Tensor.h  IdentityMatrix.h  IsotropicElasticityTensor.h  KroneckerDelta.h  LameParameters.h  LinearFEM.cpp  LinearFEM.h  LinearFEM.inl  LinearFEM[all].h  MajorSymmetric4Tensor.h  MatSoA.h  MatrixTools.h  StaticSparseMatrix.h  Strain.h  StrainDisplacement.h  SymmetricTensor.h  TangentModulus.h  Tensor.h  VecSoA.h  VecView.h  VectorTools.h  VoigtNotation.h  trait.h
tests/: CMakeLists.txt  CorotationalFEM_test.cpp  ElasticityTensor_test.cpp  ElementHyperelasticityFEMForceField_test.cpp  FiniteElement_test.cpp  HexahedronLinearSmallStrainFEMForceField_test.cpp  Material_test.cpp  MatrixTools_test.cpp  SoA_test.cpp  StrainDisplacement_test.cpp  TET4LinearSmallStrainFEMForceField_test.cpp  TetrahedronLinearSmallStrainFEMForceField_test.cpp
(+87 files in other folders)
